<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.deepsingh44.foodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.deepsingh44.foodapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>


    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.deepsingh44.foodapp.ui.addproduct.AddProductFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_addproduct" >
        <action
            android:id="@+id/action_nav_add_product_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_product_list"
        android:name="com.deepsingh44.foodapp.ui.productlist.ProductListFragment"
        android:label="@string/menu_product_list"
        tools:layout="@layout/fragment_productlist" >
        <action
            android:id="@+id/action_nav_product_list_to_detailFragment"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_nav_product_list_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>

    <fragment
        android:id="@+id/detailFragment"
        android:name="com.deepsingh44.foodapp.ui.detail.DetailFragment"
        android:label="Detail Page"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.deepsingh44.foodapp.ui.cartpage.CartFragment"
        android:label="fragment_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>